# pynfe_xml2dict

./: .gitignore  .pylintrc  Pipfile  README.md  pyproject.toml  test.py
_layouts/: orientacoes.md
nfe/: __init__.py  __main__.py  ler_nfe.py  tag_dest.py  tag_det.py  tag_emit.py  tag_ide.py
pynfe_xml2dict/cte/: index.py
pynfe_xml2dict/nfe/: __init__.py  __tag_dest__.py  __tag_det__.py  __tag_emit__.py  __tag_ide__.py  __tag_total__.py  ler_nfe.py
pynfe_xml2dict/utils/: read_xml.py
read-nfe-nfce-cte/nfce/: index.py
read-nfe-nfce-cte/nfe/: __main__.py  tag_dest.py  tag_det.py  tag_emit.py  tag_ide.py
read-nfe-nfce-cte/utils/: functions.py  read_xml.py
src/nfe/: __main__.py
src/services/nfse/: index.py
src/utils/: functions.py  read_xml.py
utils/: __init__.py  functions.py
