[tool.poetry]
name = "read-xml-nfe-nfce-cte"
version = "0.1.0"
description = "Leitura de XML referente a notas fiscais NF-e, NFC-e e CT-e"
authors = ["ElderVivot <eldervivot@gmail.com>"]
license = "MIT"
pa

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
