[tool.poetry]
name = "pynfe_xml2dict"
version = "0.0.4"
description = "Leitura de XML referente a notas fiscais NF-e, NFC-e e CT-e para dicionário"
authors = ["ElderVivot <eldervivot@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["python", "nfe", "xml"]

[tool.poetry.dependencies]
python = "^3.10"
xmltodict = "^0.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
